--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,7 @@
 						<instructions>
 							<Bundle-SymbolicName>${project.artifactId};singleton:=true</Bundle-SymbolicName>
 							<Bundle-Vendor>The Protege Development Team</Bundle-Vendor>
+							<Embed-Dependency>automaton</Embed-Dependency>
 							<Export-Package>
 								${project.artifactId}*;version=${project.version}, 
 								dk.brics.automaton.*,
