--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	
 	<groupId>edu.stanford.protege</groupId>
 	<artifactId>org.protege.integration.hermit</artifactId>
-	<version>1.0.0</version>
+	<version>1.0.1-SNAPSHOT</version>
 	<packaging>bundle</packaging>
 
 	<name>Protege HermiT Integration</name>
