--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,7 @@
 		<dependency>
 			<groupId>com.hermit-reasoner</groupId>
 			<artifactId>org.semanticweb.hermit</artifactId>
-			<version>1.3.8.3</version>
+			<version>1.3.8.5-SNAPSHOT</version>
 		</dependency>
 		
 		<dependency>
@@ -65,13 +65,13 @@
 		<dependency>
           <groupId>edu.stanford.protege</groupId>
           <artifactId>org.protege.editor.owl</artifactId>
-          <version>4.3.0</version>
+          <version>[4.3.0,5.1)</version>
         </dependency>
 
 		<dependency>
 			<groupId>net.sourceforge.owlapi</groupId>
 			<artifactId>owlapi-distribution</artifactId>
-			<version>3.4.5</version>
+			<version>[4.0.2,4.1)</version>
 		</dependency>
 	</dependencies>
 
