--- a/plugin.xml
+++ b/plugin.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <plugin>
 	<extension id="HermiT.reasoner.factory" point="org.protege.editor.owl.inference_reasonerfactory">
-        <name value="HermiT 1.3.8.3"/>
-        <label value="HermiT 1.3.8.3"/>
+        <name value="HermiT 1.3.8.5-SNAPSHOT"/>
+        <label value="HermiT 1.3.8.5-SNAPSHOT"/>
         <class value="org.protege.integration.hermit.ProtegeReasonerFactory"/>
     </extension>
 </plugin>
