--- a/pom.xml
+++ b/pom.xml
@@ -51,9 +51,21 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>net.sourceforge.owlapi</groupId>
+			<artifactId>owlapi-osgidistribution</artifactId>
+			<version>[3.5.2,3.9)</version>
+		</dependency>
+
+		<dependency>
 			<groupId>com.hermit-reasoner</groupId>
 			<artifactId>org.semanticweb.hermit</artifactId>
 			<version>1.3.8.3</version>
+			<exclusions>
+				<exclusion>
+					<groupId>net.sourceforge.owlapi</groupId>
+					<artifactId>owlapi-distribution</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		
 		<dependency>
@@ -65,14 +77,20 @@
 		<dependency>
           <groupId>edu.stanford.protege</groupId>
           <artifactId>org.protege.editor.owl</artifactId>
-          <version>4.3.0</version>
+          <version>[4.3.0,5.0.0-beta-18)</version>
+			<exclusions>
+				<exclusion>
+					<groupId>edu.stanford.protege</groupId>
+					<artifactId>protege-owlapi-extensions</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>edu.stanford.protege</groupId>
+					<artifactId>org.protege.xmlcatalog</artifactId>
+				</exclusion>
+			</exclusions>
         </dependency>
 
-		<dependency>
-			<groupId>net.sourceforge.owlapi</groupId>
-			<artifactId>owlapi-distribution</artifactId>
-			<version>3.4.5</version>
-		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -105,7 +123,7 @@
 							</Export-Package>
 							<Import-Package>
 								!org.apache.axiom.c14n.*,
-								org.protege.editor.owl.*;version="4.3", <!-- equivalent to [4.3,infinity) -->
+								org.protege.editor.owl.*;version="5.0.0", <!-- equivalent to [5.0.0,infinity) -->
 								*
 							</Import-Package>
 							<Include-Resource>plugin.xml, {maven-resources}</Include-Resource>
